samples/_failures_safe/1761667414_51a60e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c362bd1.c: In function ‘main’:
./samples/SAFE/__tmp_8c362bd1.c:164:12: error: expected identifier or ‘(’ at end of input
  164 |     struct compression_result
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8c362bd1.c:164:12: error: expected declaration or statement at end of input
